tests/ui/traits/const-traits/unsatisfied-const-trait-bound.stderr
error[E0277]: the trait bound `T: const Trait` is not satisfied
  --> $DIR/unsatisfied-const-trait-bound.rs:28:37
   |
LL | fn accept0<T: Trait>(_: Container<{ T::make() }>) {}
   |                                     ^

error[E0277]: the trait bound `T: const Trait` is not satisfied
  --> $DIR/unsatisfied-const-trait-bound.rs:32:51
   |
LL | const fn accept1<T: [const] Trait>(_: Container<{ T::make() }>) {}
   |                                                   ^

error[E0277]: the trait bound `Ty: const Trait` is not satisfied
  --> $DIR/unsatisfied-const-trait-bound.rs:21:15
   |
LL |     require::<Ty>();
   |               ^^
   |
note: required by a bound in `require`
  --> $DIR/unsatisfied-const-trait-bound.rs:8:15
   |
LL | fn require<T: const Trait>() {}
   |               ^^^^^^^^^^^ required by this bound in `require`
help: make the `impl` of trait `Trait` `const`
   |
LL | impl const Trait for Ty {
   |      +++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
